<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="detail_name">Movie Detail</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_thumbnail">movie thumbnail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="tab_movie">MOVIES</string>
    <string name="tab_tv_show">TV SHOWS</string>
    <string name="movie_title">Title</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_content">movie_content</string>
    <string name="movie_category">Category</string>
    <string name="movie_description">Description</string>
    <string name="rating_percentage">%1$s%%</string>
    <string name="please_wait">Please wait...</string>
    <!--    <string name="rating_percentage">%1$d%</string>-->
</resources>